--- a/views/project.ejs
+++ b/views/project.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Contact | Sanandiya Yash</title>
-        <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
 
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
 
@@ -22,33 +22,30 @@
             <div class="project-card">
                 <h2>Property Management</h2>
                 <p class="p-c-info">
-                    I developed a Property Management system using Node.js and MongoDB, enabling efficient CRUD
-                    operations for
-                    rental
-                    properties. Integration of Mapbox's API enhanced geospatial data visualization, aiding users in
-                    property
-                    location
-                    analysis. A robust Review System was implemented with RESTful API endpoints and MongoDB, allowing
-                    users to
-                    post, edit,
-                    and delete reviews seamlessly. User authentication was ensured through Passport.js with Passport
-                    Local and
-                    Passport-Local-Mongoose strategies, enhancing security. Express.js was utilized for server-side
-                    routing and
-                    middleware,
-                    optimizing API performance and scalability. These implementations collectively provided a secure,
-                    efficient,
-                    and
-                    user-friendly platform for managing rental properties and user reviews.
+                    I developed a system for displaying hotels, villas, and other staying places using Node.js and
+                    MongoDB, facilitating
+                    efficient CRUD operations for listings. The integration of Mapbox's API allowed for enhanced
+                    geospatial data
+                    visualization, enabling users to analyze property locations effectively. A robust review system was
+                    implemented with
+                    RESTful API endpoints and MongoDB, allowing users to seamlessly post, edit, and delete reviews. User
+                    authentication was
+                    ensured through Passport.js, utilizing Passport Local and Passport-Local-Mongoose strategies, which
+                    enhanced security.
+                    Express.js was used for server-side routing and middleware, optimizing API performance and
+                    scalability. These
+                    implementations collectively provided a secure, efficient, and user-friendly platform for viewing
+                    and reviewing hotels,
+                    villas, and other staying places.
                 </p>
                 <p class="technologies">
                     <strong>Technologies Used:</strong> HTML, CSS, Node JS, Express JS, MongoDB
                 </p>
                 <div class="icons">
-                    <a href="https://github.com/sanandiyayash/wonderlust" target="_blank">
+                    <a href="https://github.com/sanandiyayash/stay-finder" target="_blank">
                         <i class="ri-github-line"></i>
                     </a>
-                    <a href="https://wonderlust-ggug.onrender.com/" target="_blank">
+                    <a href="https://stay-finder.onrender.com/listings" target="_blank">
                         <i class="ri-external-link-line"></i>
                     </a>
                 </div>
