--- a/views/project.ejs
+++ b/views/project.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Contact | Sanandiya Yash</title>
+    <title>project | Sanandiya Yash</title>
     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
 
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
