--- a/views/project.ejs
+++ b/views/project.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>project | Sanandiya Yash</title>
+    <title>Project | Sanandiya Yash</title>
     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
 
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
@@ -20,7 +20,7 @@
         <div class="projects-section">
             <h1>Projects</h1>
             <div class="project-card">
-                <h2>Property Management</h2>
+                <h2>Stay Finder</h2>
                 <p class="p-c-info">
                     I developed a system for displaying hotels, villas, and other staying places using Node.js and
                     MongoDB, facilitating
