--- a/views/experience.ejs
+++ b/views/experience.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>experience | Sanandiya Yash</title>
+    <title>Experience | Sanandiya Yash</title>
     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
 
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
