--- a/views/include/nav.ejs
+++ b/views/include/nav.ejs
@@ -2,7 +2,7 @@
     <nav>
         <div class="logo z">Sanandiya <span>Yash</span></div>
         <ul class="nav-links">
-            <li><a href="/home">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="/about">About</a></li>
             <li><a href="/projects">Projects</a></li>
             <li><a href="/experience">Experiance</a></li>
